multi line post places wrap issue

--- a/src/app/messages/partials/message/post-cards.scss
+++ b/src/app/messages/partials/message/post-cards.scss
@@ -432,6 +432,7 @@ post-card {
     }
   }
   > span {
+    margin-bottom: 6px;
     background-color: white;
     border-radius: 4px;
     line-height: 32px;
